feat: Update script

--- a/styles/main.css
+++ b/styles/main.css
@@ -32,18 +32,28 @@ BODY {
     font-size: x-large;
 }
 
-.name A {
+A {
     text-decoration: none;
 }
 
 .male {
-    background-color: #BDE0FE;
-    color: #A2D2FF;
+    background-color: #CCE5FF;
+    color: #004085;
+    border-color: #B8DAFF;
+}
+
+.male A {
+    color: #002752;
 }
 
 .female {
     background-color: #FFC8DD;
-    color: #FFAFCC;
+    color: #721C24;
+    border-color: #F5C6CB;
+}
+
+.female A {
+    color: #491217;
 }
 
 .self {
